# remdo

./: .gitignore  README.md  acquisition.py  active_learning.py  active_learning_example.ipynb  aerostructures_openmdao.ipynb  aerostructures_openmdao.py  gp.py  matlab_engine_runner.py  maximin_test.ipynb  mw_runner.py  openmdao_server.py  pyproject.toml  requirements.txt  satellite_example_mpi.py  satellite_openmdao.ipynb  satellite_openmdao.py  test_functions.py  turbine_openmdao.ipynb  turbine_openmdao.py  utils.py
ai_agent/agent_residuals/: satellite_residual_compute.py  satellite_residual_setup.py
ai_agent/mcp_server/: openmdao_server.py
examples/: active_learning_example.ipynb  aerostructures_active_learning.py  aerostructures_openmdao.ipynb  experiment_utils.py  maximin_test.ipynb  satellite_active_learning.py  satellite_example_mpi.py  turbine_feedback_AL.py  turbine_openmdao.ipynb
examples/matlab/: README.md  fem_heat_solve.py  mystery.m  mystery_solve.py
openmdao/: aerostructures_openmdao.py  openmdao_loader.py  problem_base.py  satellite_openmdao.py  turbine_openmdao.py
src/remdo/: __init__.py  acquisition.py  active_learning.py  config.py  container.py  gp.py  openmdao_loader.py  problems.py  test_functions.py  turbine_blade.STL  turbine_openmdao.py  utils.py
tests/: conftest.py  test_acquisition.py  test_active_learning.py  test_config.py  test_gp.py  test_import_compatibility.py  test_mcp_ingestion.py  test_openmdao_layout.py  test_problems.py  test_turbine_fem.py
turbineFEM/: __init__.py  turbineFEM.ctf
(+15 files in other folders)
